# flyingfish

./: CMakeLists.txt  build.bat  build.sh  justfile  makefile  out.cff  readme.md  run.ps1  run.sh  testprogram.ff  testprogram.tst
.cache/clangd/index/: array_utils.c.46487B6A2758E251.idx  array_utils.h.D21B2970F607C83A.idx  error.c.6D93D47968DE3697.idx  error.h.4A6F0D68EAB67023.idx  file_utils.c.3E8C65FC30F55EE5.idx  file_utils.h.5E562CF9DF85693D.idx  main.c.6F0479D1FA663B41.idx  scanner.c.7D86210D2D8E59E2.idx  scanner.h.544559D3A374F5D0.idx  token.c.B1D9BF49568B1302.idx  token.h.975A0FB2A05DFD77.idx
src/headerfiles/: bytecode.h  compiler.h  emitter.h  error.h  hashmap.h  interpreter.h  numtypes.h  parser.h  scanner.h  token.h
src/headerfiles/ast/: expression.h  statement.h
src/headerfiles/utils/: array.h  file.h  file_utils.h  string.h  string_utils.h
src/sourcefiles/: bytecode.c  compiler.c  emitter.c  error.c  hashmap.c  interpreter.c  main.c  parser.c  parser.h  scanner.c  token.c
src/sourcefiles/ast/: expression.c  statement.c
src/sourcefiles/utils/: array.c  array_utils.c  file.c  file_utils.c  string.c  string_utils.c
src/utils/headerfiles/: array_utils.h  file_utils.h
src/utils/sourcefiles/: array_utils.c  file_utils.c
